name:          janus-library
version:	0.1.2
license:       OtherLicense
license-file:  LICENSE
author:        Christian Uhlig
copyright:     Copyright (c) 2006 Christian Uhlig
maintainer:    Christian Uhlig <uhl@fh-wedel.de>
stability:     experimental
category:      Server, Network
synopsis:      A flexible Haskell application server.
homepage:      http://holumbus.fh-wedel.de/janus
description:   A flexible Haskell application server.

cabal-version: >=1.2

flag splitBase
  description: Choose the new smaller, split-up base package.

library
  build-depends: base >= 3
               , haskell98 >= 1.0
               , containers >= 0.1
               , old-time >= 1.0
               , directory >= 1.0
               , parsec >= 2.1 && < 3
               , network >= 2.1
               , regex-compat >= 0.71
               , html >= 1.0
               , plugins >= 1.1
               , hxt >= 8.0

  exposed-modules:
    Network.Server.Janus.Core
    Network.Server.Janus.Server
    Network.Server.Janus.ServerVersion
    Network.Server.Janus.JanusPaths
    Network.Server.Janus.XmlHelper
    Network.Server.Janus.Transaction
    Network.Server.Janus.Messaging
    Network.Server.Janus.DynamicLoader
    Network.Server.Janus.HTMLBuilder
    Network.Server.Janus.Shader.SystemShader
    Network.Server.Janus.Shader.ControlShader
    Network.Server.HWS.Util
    Network.Server.HWS.Request
    Network.Server.HWS.Response
  other-modules:
    Network.Server.HWS.Config
    Network.Server.HWS.MimeTypes
    Network.Server.HWS.ParseError
    Network.Server.HWS.Parser
  hs-source-dirs: source
  ghc-options: -Wall
