Name:                test
Version:             0.1
Synopsis:            test
License:             PublicDomain
License-file:        LICENSE
Author:              xxx
Maintainer:          xxx@yyy
Category:            test
Build-type:          Simple
Cabal-version:       >=1.2

Executable fanout
  Main-is:             Fanout.hs
  hs-source-dirs:      . ../src
  build-depends: base

Executable hread
  Main-is:             Hread.hs
  hs-source-dirs:      . ../src
  build-depends: base


  
